src/objects/QIRS__c.object
<CustomObject>
    <description>This object is used for collecting the details of the stop shipment.</description>
    <fields>
        <fullName>Access_Stop_Ship_Code__c</fullName>
        <label>Access Stop Ship Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Email__c</fullName>
        <inlineHelpText>Additional Email Addresses when Opened, Released and Closed. Use only nokia.com addresses</inlineHelpText>
        <label>Additional Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Affected_Unit_at_Customer_Action__c</fullName>
        <inlineHelpText>Action for Affected Unit at Customer</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affected_Unit_at_Factories_Action__c</fullName>
        <inlineHelpText>Action for Affected Unit at Factories</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affected_Unit_at_Hubs_Action__c</fullName>
        <inlineHelpText>Action for Affected Unit at Hubs</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affected_Units_at_HWS_Action__c</fullName>
        <inlineHelpText>Action for Affected Unit at HWS</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affected_Units_at_HWS__c</fullName>
        <inlineHelpText>Number of units impacted by the issue</inlineHelpText>
        <label>Affected Units at HWS</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Affected_Units_at_Suppliers_Action__c</fullName>
        <inlineHelpText>Action for Affected Unit at Suppliers</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrap</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affected_Units_at_Suppliers__c</fullName>
        <inlineHelpText>Number of units impacted by the issue</inlineHelpText>
        <label>Affected Units at Suppliers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <inlineHelpText>Delivery Stop if problem affects to customer deliveries. Quality alert if not</inlineHelpText>
        <label>Alert Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quality Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Stop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <description>Approver comments  for QIRS object</description>
        <inlineHelpText>Enter Approval Comments</inlineHelpText>
        <label>Approval Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approver_Contacted10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver Contacted10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Contacted1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver Contacted1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Contacted2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver Contacted2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>Business group pick list values.</description>
        <inlineHelpText>Business Line under Business Unit</inlineHelpText>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>3G Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseband Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud IMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud SDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HetRAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IoT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE-A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE-N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RF and Advanced Antennas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Cell and WiFi Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Haul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzBBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCDMA/LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCore Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzDNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGlobal LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzMWT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzOptical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPacket Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPacket Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzPerfect Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzRadio Platforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzSmall Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzVIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzWCDMA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <description>Business name pick list values.</description>
        <inlineHelpText>Nokia Business Unit</inlineHelpText>
        <label>Business</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Mobile Network Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Global Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzCustomer Experience Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzGlobal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zzMobile Broadband</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Name__c</fullName>
        <inlineHelpText>Descriptive Name of the case</inlineHelpText>
        <label>Case Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Aging__c</fullName>
        <formula>IF( !ISNULL(Closed_Date1__c), 

TEXT( FLOOR( (Closed_Date1__c   -  CreatedDate)) )+ &apos;Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((Closed_Date1__c   -  CreatedDate)*24,24)   ,0))+&apos;hours&apos;,

TEXT( FLOOR( (NOW()   -  CreatedDate)) )+ &apos;Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((NOW()   -  CreatedDate)*24,24)   ,0))+&apos;hours&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date1__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Core_ID__c</fullName>
        <inlineHelpText>Required</inlineHelpText>
        <label>Core ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <summarizedField>QIRS_Cost__c.Cost__c</summarizedField>
        <summaryForeignKey>QIRS_Cost__c.QIRS__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <inlineHelpText>Multiple countries can be selected by holding down the control key</inlineHelpText>
        <label>Impacted Countries</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia (Plurinational State of)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape Verde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central African Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Impact__c</fullName>
        <description>To determine the customer impact.</description>
        <inlineHelpText>None(customers do not notice)
Low(customer may notice and should be corrected in next release)
Medium(may cause customer dissatisfaction and should be corrected as soon as possible)
High(will cause customer dissatisfaction,must be fixed before release)</inlineHelpText>
        <label>Customer Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <inlineHelpText>Enter multiple customers by using a comma</inlineHelpText>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cycle_Time_Days__c</fullName>
        <formula>IF (ISPICKVAL( Status__c ,&quot;Closed&quot;),  (Closed_Date1__c  - CreatedDate), (Now() -  CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cycle Time (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Defective_Part__c</fullName>
        <description>Defective part  pick list.</description>
        <inlineHelpText>Select Defective Part</inlineHelpText>
        <label>Defective Part</label>
        <picklist>
            <picklistValues>
                <fullName>Component Supplier</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing - Internal and EMS/ODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not an issue(NTF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_close_date__c</fullName>
        <description>Date to have the stop shipment closed (process and products released).</description>
        <inlineHelpText>Enter estimated close date for this record</inlineHelpText>
        <label>Estimated close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Number_of_return__c</fullName>
        <description>Quantity of products (units) field.</description>
        <inlineHelpText>Enter Expected Number of returns</inlineHelpText>
        <label>Expected Number of returns</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exposed_Base__c</fullName>
        <description>Total quantity of affected products field.</description>
        <inlineHelpText>Number of affected units at Customers</inlineHelpText>
        <label>Affected units at Customer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR__c</fullName>
        <label>FBR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_DC__c</fullName>
        <description>The percentage of phones that still remains in the factory or DC field.</description>
        <inlineHelpText>Number of affected units at Customers</inlineHelpText>
        <label>Affected units at HUB</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory__c</fullName>
        <description>Factory which is effected (can be many)</description>
        <inlineHelpText>Factory which is effected (can be many)</inlineHelpText>
        <label>Factory</label>
        <picklist>
            <picklistValues>
                <fullName>Celestica Sriracha, Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eu-Einea Eu, France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Austin, US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Guadalajara North, Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Ibaraki, Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Sorocaba, Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Tczew, Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Timisoara, Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flextronics Wuzhong, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foxconn Shanghai, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil Tianjin, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jabil T-town, Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Beijing, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Berlin, Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Chennai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Oulu, Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Shanghai, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Suzhou, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSB Shanghai, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMP, Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Carrolton, US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Chennai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Guadalajara, Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Haukipudas, Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Kunshan, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Miscolk, Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Pathum Thani, Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Quianjing, China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanmina Tatabanya, Hungary</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Group_to_Notify__c</fullName>
        <inlineHelpText>Change to “Business to Group to Notify”</inlineHelpText>
        <label>Business Group to Notify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Region_Customer__c</fullName>
        <label>Impacted Region/Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Region__c</fullName>
        <inlineHelpText>Multiple regions can be selected by holding down the control key</inlineHelpText>
        <label>Impacted Region</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W Europe</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsDefaultReleased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefaultReleased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueLevelColor__c</fullName>
        <formula>IF( ISPICKVAL(Issue_Level__c,&quot;Critical&quot;) ,&quot;blue&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Medium&quot;) ,&quot;white&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Continue Production&quot;) ,&quot;yellow&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Stop Production&quot;) ,&quot;#6BB200&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Management Escalation&quot;) ,&quot;Red&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Waiver Required&quot;) ,&quot;Orange&quot;, 
IF( ISPICKVAL(Issue_Level__c,&quot;Launch Delay&quot;) ,&quot;Red&quot;,&quot;white&quot;)))))))</formula>
        <label>IssueLevelColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Level__c</fullName>
        <description>Severity of the created record.</description>
        <inlineHelpText>Management escalation means that the case must be communicated to OPS LT</inlineHelpText>
        <label>Issue Level</label>
        <picklist>
            <controllingField>Alert_Type__c</controllingField>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stop Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Escalation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Launch Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Stop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Approved_Program_Milestone__c</fullName>
        <description>“Last Approved Program Milestone” is a dependent picklist on “Alert Type” field&quot;.</description>
        <label>Last Approved Program Milestone</label>
        <picklist>
            <controllingField>Alert_Type__c</controllingField>
            <picklistValues>
                <fullName>P0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifted_Aging__c</fullName>
        <formula>IF(   !ISNULL(Lifted_Date__c) , 

TEXT( FLOOR( (Lifted_Date__c   -  CreatedDate)) )+ &apos; Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((Lifted_Date__c   -  CreatedDate)*24,24)   ,0))+&apos; hours&apos;,

TEXT( FLOOR( (NOW()   -  CreatedDate)) )+ &apos;Days&apos;+
&apos;/&apos;+TEXT(ROUND(  MOD((NOW()   -  CreatedDate)*24,24)   ,0))+&apos;hours&apos;)</formula>
        <label>Released Aging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifted_Date__c</fullName>
        <label>Released Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Line_Stop__c</fullName>
        <label>Line Stop id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Points_SH_Shipping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine the sub-process that must be locked.</description>
        <inlineHelpText>Select Shipping</inlineHelpText>
        <label>Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCAR_Supplier_Claim__c</fullName>
        <label>MCAR/Supplier Claim id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR__c</fullName>
        <inlineHelpText>Only numeric value</inlineHelpText>
        <label>MCAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Approver10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Approver10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRSM4Ha</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NSN_Part_Number__c</fullName>
        <inlineHelpText>Enter Supplier Part Number</inlineHelpText>
        <label>NSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Record_Notification__c</fullName>
        <description>To track history for new record notification</description>
        <label>Notification Status</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_CRSD__c</fullName>
        <inlineHelpText>Enter Next Customer Requested Ship Date (CRSD)</inlineHelpText>
        <label>Next Customer Requested Ship Date (CRSD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Operator_Warning_Message__c</fullName>
        <description>Text Area Field to determine the message.</description>
        <inlineHelpText>Enter Operator Warning Message</inlineHelpText>
        <label>Operator Warning Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orders_Impact__c</fullName>
        <inlineHelpText>Number of orders impacted due to this issue</inlineHelpText>
        <label>Orders Impact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orders_backlog__c</fullName>
        <description>Number of shipment orders to customers Field.</description>
        <inlineHelpText>Number of orders at risk due to this issue</inlineHelpText>
        <label>Orders at Risk</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QIRS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Creation_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Original Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PKNI_SBSCode__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Problem_Description1__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>